<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/paage" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_login_password"
        android:layout_alignRight="@+id/et_login_password"
        android:layout_below="@+id/iv_login_logo"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/et_login_username"
        android:singleLine="true" />

    <requestFocus />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iv_login_logo"
        android:layout_below="@+id/et_login_username"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/et_login_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_login_password"
        android:layout_below="@+id/et_login_password"
        android:layout_marginTop="25dp"
        android:text="@string/bt_login_login" />

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_login_login"
        android:layout_alignBottom="@+id/btn_login_login"
        android:layout_alignLeft="@+id/et_login_password"
        android:text="@string/bt_login_register" />

</RelativeLayout>